--- a/T3kCfgFE/QTouchSettingDialog.ui
+++ b/T3kCfgFE/QTouchSettingDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>958</width>
+    <height>717</height>
    </rect>
   </property>
   <property name="font">
@@ -16,7 +16,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Touch Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -845,6 +845,39 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>scrollArea</tabstop>
+  <tabstop>btnTMTopDec</tabstop>
+  <tabstop>txtEdtTMTop</tabstop>
+  <tabstop>btnTMTopInc</tabstop>
+  <tabstop>btnTMLeftDec</tabstop>
+  <tabstop>txtEdtTMLeft</tabstop>
+  <tabstop>btnTMLeftInc</tabstop>
+  <tabstop>btnTMRightDec</tabstop>
+  <tabstop>txtEdtTMRight</tabstop>
+  <tabstop>btnTMRightInc</tabstop>
+  <tabstop>btnTMBottomDec</tabstop>
+  <tabstop>txtEdtTMBottom</tabstop>
+  <tabstop>btnTMBottomInc</tabstop>
+  <tabstop>horzSliderTap</tabstop>
+  <tabstop>txtEdtTap</tabstop>
+  <tabstop>horzSliderLongTap</tabstop>
+  <tabstop>txtEdtLongTap</tabstop>
+  <tabstop>horzSliderWheel</tabstop>
+  <tabstop>txtEdtWheel</tabstop>
+  <tabstop>horzSliderZoom</tabstop>
+  <tabstop>txtEdtZoom</tabstop>
+  <tabstop>gbAutoSelect</tabstop>
+  <tabstop>btnMouse</tabstop>
+  <tabstop>btnMultitouch</tabstop>
+  <tabstop>btnFull</tabstop>
+  <tabstop>btnDigitizerOnly</tabstop>
+  <tabstop>btnReset</tabstop>
+  <tabstop>btnGestureProfile</tabstop>
+  <tabstop>btnRefresh</tabstop>
+  <tabstop>btnSave</tabstop>
+  <tabstop>btnClose</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
