--- a/T3kCfgFE/QAreaSettingForm.ui
+++ b/T3kCfgFE/QAreaSettingForm.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QTextEdit" name="txtEdtAreaClick">
+  <widget class="QBorderStyleEdit" name="txtEdtAreaClick">
    <property name="geometry">
     <rect>
      <x>44</x>
@@ -28,6 +28,9 @@
    <property name="tabChangesFocus">
     <bool>true</bool>
    </property>
+   <property name="lineWrapMode">
+    <enum>QTextEdit::NoWrap</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="btnAreaClickRight">
    <property name="geometry">
@@ -40,6 +43,9 @@
    </property>
    <property name="text">
     <string>+</string>
+   </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="btnAreaClickLeft">
@@ -54,6 +60,9 @@
    <property name="text">
     <string>-</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="btnAreaDblClickLeft">
    <property name="geometry">
@@ -66,6 +75,9 @@
    </property>
    <property name="text">
     <string>-</string>
+   </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="btnAreaDblClickRight">
@@ -80,8 +92,11 @@
    <property name="text">
     <string>+</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
   </widget>
-  <widget class="QTextEdit" name="txtEdtAreaDblClick">
+  <widget class="QBorderStyleEdit" name="txtEdtAreaDblClick">
    <property name="geometry">
     <rect>
      <x>44</x>
@@ -96,6 +111,9 @@
    <property name="tabChangesFocus">
     <bool>true</bool>
    </property>
+   <property name="lineWrapMode">
+    <enum>QTextEdit::NoWrap</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="btnAreaPnTLeft">
    <property name="geometry">
@@ -109,8 +127,11 @@
    <property name="text">
     <string>-</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
   </widget>
-  <widget class="QPushButton" name="btnAreaPntRight">
+  <widget class="QPushButton" name="btnAreaPnTRight">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -122,8 +143,11 @@
    <property name="text">
     <string>+</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
   </widget>
-  <widget class="QTextEdit" name="txtEdtAreaPnt">
+  <widget class="QBorderStyleEdit" name="txtEdtAreaPnT">
    <property name="geometry">
     <rect>
      <x>44</x>
@@ -138,6 +162,9 @@
    <property name="tabChangesFocus">
     <bool>true</bool>
    </property>
+   <property name="lineWrapMode">
+    <enum>QTextEdit::NoWrap</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="btnAreaPalmLeft">
    <property name="geometry">
@@ -150,6 +177,9 @@
    </property>
    <property name="text">
     <string>-</string>
+   </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="btnAreaPalmRight">
@@ -164,8 +194,11 @@
    <property name="text">
     <string>+</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
   </widget>
-  <widget class="QTextEdit" name="txtEdtAreaPalm">
+  <widget class="QBorderStyleEdit" name="txtEdtAreaPalm">
    <property name="geometry">
     <rect>
      <x>44</x>
@@ -180,24 +213,18 @@
    <property name="tabChangesFocus">
     <bool>true</bool>
    </property>
-  </widget>
-  <widget class="QLabel" name="lblFocusStealer">
-   <property name="geometry">
-    <rect>
-     <x>180</x>
-     <y>20</y>
-     <width>101</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="focusPolicy">
-    <enum>Qt::ClickFocus</enum>
-   </property>
-   <property name="text">
-    <string>Focus Stealer</string>
+   <property name="lineWrapMode">
+    <enum>QTextEdit::NoWrap</enum>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QBorderStyleEdit</class>
+   <extends>QTextEdit</extends>
+   <header>QBorderStyleEdit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
