--- a/T3kCfgFE/QBentAdjustmentDialog.ui
+++ b/T3kCfgFE/QBentAdjustmentDialog.ui
@@ -221,6 +221,9 @@ QTextEdit:disabled {
                   <property name="tabChangesFocus">
                    <bool>true</bool>
                   </property>
+                  <property name="lineWrapMode">
+                   <enum>QTextEdit::NoWrap</enum>
+                  </property>
                  </widget>
                 </item>
                 <item>
@@ -405,6 +408,9 @@ QTextEdit:disabled {
                   <property name="tabChangesFocus">
                    <bool>true</bool>
                   </property>
+                  <property name="lineWrapMode">
+                   <enum>QTextEdit::NoWrap</enum>
+                  </property>
                   <property name="html">
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -579,6 +585,9 @@ Inverted Landscape</string>
                   </property>
                   <property name="tabChangesFocus">
                    <bool>true</bool>
+                  </property>
+                  <property name="lineWrapMode">
+                   <enum>QTextEdit::NoWrap</enum>
                   </property>
                   <property name="html">
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
@@ -770,6 +779,9 @@ p, li { white-space: pre-wrap; }
                   </property>
                   <property name="tabChangesFocus">
                    <bool>true</bool>
+                  </property>
+                  <property name="lineWrapMode">
+                   <enum>QTextEdit::NoWrap</enum>
                   </property>
                  </widget>
                 </item>
