--- a/T3kCfgFE/QTouchSettingDialog.ui
+++ b/T3kCfgFE/QTouchSettingDialog.ui
@@ -147,6 +147,9 @@
             <property name="text">
              <string>+</string>
             </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMTopDec">
             <property name="geometry">
@@ -159,6 +162,9 @@
             </property>
             <property name="text">
              <string>-</string>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
             </property>
            </widget>
            <widget class="QBorderStyleEdit" name="txtEdtTMTop">
@@ -176,6 +182,9 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
+            <property name="lineWrapMode">
+             <enum>QTextEdit::NoWrap</enum>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMBottomDec">
             <property name="geometry">
@@ -188,6 +197,9 @@
             </property>
             <property name="text">
              <string>-</string>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
             </property>
            </widget>
            <widget class="QBorderStyleEdit" name="txtEdtTMBottom">
@@ -205,6 +217,9 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
+            <property name="lineWrapMode">
+             <enum>QTextEdit::NoWrap</enum>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMBottomInc">
             <property name="geometry">
@@ -218,6 +233,9 @@
             <property name="text">
              <string>+</string>
             </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMLeftDec">
             <property name="geometry">
@@ -230,6 +248,9 @@
             </property>
             <property name="text">
              <string>-</string>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
             </property>
            </widget>
            <widget class="QBorderStyleEdit" name="txtEdtTMLeft">
@@ -247,6 +268,9 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
+            <property name="lineWrapMode">
+             <enum>QTextEdit::NoWrap</enum>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMLeftInc">
             <property name="geometry">
@@ -259,6 +283,9 @@
             </property>
             <property name="text">
              <string>+</string>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
             </property>
            </widget>
            <widget class="QBorderStyleEdit" name="txtEdtTMRight">
@@ -276,6 +303,9 @@
             <property name="tabChangesFocus">
              <bool>true</bool>
             </property>
+            <property name="lineWrapMode">
+             <enum>QTextEdit::NoWrap</enum>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMRightInc">
             <property name="geometry">
@@ -289,6 +319,9 @@
             <property name="text">
              <string>+</string>
             </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
+            </property>
            </widget>
            <widget class="QPushButton" name="btnTMRightDec">
             <property name="geometry">
@@ -301,6 +334,9 @@
             </property>
             <property name="text">
              <string>-</string>
+            </property>
+            <property name="autoRepeat">
+             <bool>true</bool>
             </property>
            </widget>
           </widget>
@@ -400,6 +436,9 @@
              <property name="tabChangesFocus">
               <bool>true</bool>
              </property>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::NoWrap</enum>
+             </property>
             </widget>
            </item>
           </layout>
@@ -463,6 +502,9 @@
              </property>
              <property name="tabChangesFocus">
               <bool>true</bool>
+             </property>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::NoWrap</enum>
              </property>
             </widget>
            </item>
@@ -560,6 +602,9 @@
              <property name="tabChangesFocus">
               <bool>true</bool>
              </property>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::NoWrap</enum>
+             </property>
             </widget>
            </item>
           </layout>
@@ -620,6 +665,9 @@
              </property>
              <property name="tabChangesFocus">
               <bool>true</bool>
+             </property>
+             <property name="lineWrapMode">
+              <enum>QTextEdit::NoWrap</enum>
              </property>
             </widget>
            </item>
